XM1-35887: Update to new version spring boot and migration to new commons;